domain/domain1.ingress.yaml
# Copyright (c) 2020, 2022, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain1-ingress-host
  namespace: domain1-ns
spec:
  ingressClassName: nginx
  rules:
  - #host: domain1.org
    http:
      paths:
      - path: /myapp_war
        pathType: ImplementationSpecific
        backend:
          service:
            name: domain1-cluster-cluster-1
            port:
              number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain1-ingress2-host
  namespace: domain1-ns
spec:
  ingressClassName: nginx
  rules:
  - #host: domain1.org
    http:
      paths:
      - path: /another-app
        pathType: ImplementationSpecific
        backend:
          service:
            name: domain1-cluster-another-app
            port:
              number: 8003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-console-tls
  namespace: domain1-ns
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_input_headers "WL-Proxy-Client-IP" "WL-Proxy-SSL";
      more_set_input_headers "X-Forwarded-Proto: https";
      more_set_input_headers "WL-Proxy-SSL: true";
    nginx.ingress.kubernetes.io/ingress.allow-http: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    secretName: domain-tls-cert
  rules:
  - host: 
    http:
      paths:
      - path: /console
        pathType: Prefix
        backend:
          service:
            name: domain1-admin-server
            port:
              number: 7001
